@@ -100,6 +100,7 @@ typedef struct conn_t {
 #define COMBO_DELAY 250000000	/* Delay before sending a combo message (in nanoseconds) */
 
 int keeprunning = 1;
+int dologswitch = 0;
 time_t laststatus = 0;
 char *logfile = NULL;
 int logdetails = 0;
@@ -115,11 +116,7 @@ void sigmisc_handler(int signum)
 		break;
 
 	  case SIGHUP:
-		if (logfile) {
-			reopen_file(logfile, "a", stdout);
-			reopen_file(logfile, "a", stderr);
-			errprintf("Caught SIGHUP, reopening logfile\n");
-		}
+		dologswitch = 1;
 		break;
 
 	  case SIGUSR1:
@@ -376,6 +373,12 @@ int main(int argc, char *argv[])
 	}
 
 	/* Redirect logging to the logfile, if requested */
+	if (!logfile && getenv("XYMONLAUNCH_LOGFILENAME")) {
+		/* No log file on the command line, but our STDOUT is already */
+		/* being piped somewhere. Record this for when it's time to re-open on rotation */
+		logfile = xgetenv("XYMONLAUNCH_LOGFILENAME");
+		dbgprintf("Already logging out to %s, per xymonlaunch\n", logfile);
+	}
 	if (logfile) {
 		reopen_file(logfile, "a", stdout);
 		reopen_file(logfile, "a", stderr);
@@ -435,6 +438,15 @@ int main(int argc, char *argv[])
 		time_t ctime;
 		int combining = 0;
 		time_t now = getcurrenttime(NULL);
+
+		if (dologswitch) {
+			logprintf("Reopening logfile\n");
+			if (logfile) {
+				reopen_file(logfile, "a", stdout);
+				reopen_file(logfile, "a", stderr);
+			}
+			dologswitch = 0;
+		}
 
 		/* See if it is time for a status report */
 		if (proxyname && ((now = gettimer()) >= (laststatus+300))) {
