@@ -16,6 +16,10 @@ Changes from 4.3.x -> 4.4-alpha
 * xymonlaunch: Add support for specifying a PIDFILE in tasks.cfg or clientlaunch.cfg
 * xymonlaunch: Add SENDHUP support for optionally passing along signals to running 
   tasks (ie, for log rotation)
+* xymonlaunch now passes the path to LOGFILE (if configured) as $XYMONLAUNCH_LOGFILENAME,
+  which will be used as the default logfn for xymond, xymonproxy, xymond_channel,
+  and its children
+* xymond_channel: Timestamp and tag log output to reduce confusion w/ child entries
 
 
 Changes from 4.3.22 -> 4.3.23 (12 Nov 2015)
